feat: new version of fluent-verifier with workspace support and updated flags and toolchain
